Refactor/Session: Service layer 함수 분리 (#35)